--- a/agenda.html
+++ b/agenda.html
@@ -9,6 +9,9 @@
 <header>
     <nav class="barre_bouton_menu">
         <div class="bouton_menu_gauche">
+            <a href="accueil.html">
+                <button class="bouton_menu">accueil</button>
+            </a>
             <a href="cours.html">
                 <button class="bouton_menu">mes cours</button>
             </a>
