--- a/accueil.html
+++ b/accueil.html
@@ -10,6 +10,9 @@
 <header>
     <nav class="barre_bouton_menu">
         <div class="bouton_menu_gauche">
+            <a href="accueil.html">
+                <button id="bouton_menu_actif" class="bouton_menu" disabled>accueil</button>
+            </a>
             <a href="cours.html">
                 <button class="bouton_menu">mes cours</button>
             </a>
@@ -26,52 +29,52 @@
 </header>
 
 <div class="page_acceuil">
-<main>
+    <main>
 
-    <section class="recent-courses">
-        <h2>cour récent</h2>
-        <div class="course-list">
-            <div class="cour">
-                <div class="course-img"></div>
-                <p>WE4A</p>
-                <a class="lien" href="#">Sujet TD3 ⬇</a>
+        <section class="recent-courses">
+            <h2>cour récent</h2>
+            <div class="course-list">
+                <div class="cour">
+                    <div class="course-img"></div>
+                    <p>WE4A</p>
+                    <a class="lien" href="#">Sujet TD3 ⬇</a>
+                </div>
+                <div class="cour">
+                    <div class="course-img"></div>
+                    <p>SI40</p>
+                    <a>Salle A101</a>
+                </div>
+                <div class="cour">
+                    <div class="course-img"></div>
+                    <p>RS40</p>
+                    <a>Début TP</a>
+                </div>
             </div>
-            <div class="cour">
-                <div class="course-img"></div>
-                <p>SI40</p>
-                <a>Salle A101</a>
+            <button id="bouton_defil_cour">▼</button>
+        </section>
+        <div class="activity">
+            <h2>dernière activité</h2>
+            <div id="activity-container">
+                <li>⭐ en "cour" "personne à "action" "Titre"</li>
+                <li>🔺 en WE4A M.Lombar à rajouter
+                    <a class="lien"  href="#">Sujet TD3 ⬇</a>
+                </li>
+                <li>🔺 en WE4A M.Lombar à annoncer changement de salle</li>
+                <li>⭐ en "cour" "personne à "action" "Titre"</li>
+                <li>🔺 en WE4A M.Lombar à rajouter
+                    <a class="lien" href="#">Sujet TD3 ⬇</a>
+                </li>
+                <li>🔺 en WE4A M.Lombar à annoncer changement de salle</li>
+                <li>⭐ en "cour" "personne à "action" "Titre"</li>
+                <li>🔺 en WE4A M.Lombar à rajouter
+                    <a class="lien" href="#">Sujet TD3 ⬇</a>
+                </li>
+                <li>🔺 en WE4A M.Lombar à annoncer changement de salle</li>
             </div>
-            <div class="cour">
-                <div class="course-img"></div>
-                <p>RS40</p>
-                <a>Début TP</a>
-            </div>
+            <div id="scroll-trigger"></div>
         </div>
-        <button id="bouton_defil_cour">▼</button>
-    </section>
-    <div class="activity">
-        <h2>dernière activité</h2>
-        <div id="activity-container">
-            <li>⭐ en "cour" "personne à "action" "Titre"</li>
-            <li>🔺 en WE4A M.Lombar à rajouter
-                <a class="lien"  href="#">Sujet TD3 ⬇</a>
-            </li>
-            <li>🔺 en WE4A M.Lombar à annoncer changement de salle</li>
-            <li>⭐ en "cour" "personne à "action" "Titre"</li>
-            <li>🔺 en WE4A M.Lombar à rajouter
-                <a class="lien" href="#">Sujet TD3 ⬇</a>
-            </li>
-            <li>🔺 en WE4A M.Lombar à annoncer changement de salle</li>
-            <li>⭐ en "cour" "personne à "action" "Titre"</li>
-            <li>🔺 en WE4A M.Lombar à rajouter
-                <a class="lien" href="#">Sujet TD3 ⬇</a>
-            </li>
-            <li>🔺 en WE4A M.Lombar à annoncer changement de salle</li>
-        </div>
-        <div id="scroll-trigger"></div>
-    </div>
 
-</main>
+    </main>
     <main id="page_acceuil_agenda">
         <!-- FullCalendar CSS -->
         <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
