--- a/connexion.html
+++ b/connexion.html
@@ -20,19 +20,20 @@
 
 
 
-    <section class="page_connexion">
-        <h2>Connexion</h2>
-        <div>
-            pour le test<br>
-            user = admin<br>
-            mdp = 1234
-        </div>
-        <form id="form_connexion">
-            <input class="connexion_input" type="text" id="utilisateur" placeholder="nom d'utilisateur" required>
-            <input class="connexion_input" type="password" id="mdp" placeholder="mot de passe" required>
-            <button class="bouton_connection" type="submit">Connexion</button>
-        </form>
-    </section>
+<section class="page_connexion">
+    <h2>Connexion</h2>
+    <div>
+        pour le test<br>
+        user = admin<br>
+        mdp = 1234
+    </div>
+    <form id="form_connexion">
+        <input class="connexion_input" type="text" id="utilisateur" placeholder="nom d'utilisateur" required>
+        <input class="connexion_input" type="password" id="mdp" placeholder="mot de passe" required>
+        <button class="bouton_connection" type="submit">Connexion</button>
+        <div id="erreur_message" style="color: red; margin-top: 8px;"></div>
+    </form>
+</section>
 
 
 
