rajout lien télécharger

--- a/accueil.html
+++ b/accueil.html
@@ -37,7 +37,7 @@
                 <div class="cour" onclick="window.location.href='cour.html'" style="cursor: pointer;">
                     <div class="course-img"></div>
                     <p>WE4A</p>
-                    <a class="lien" href="#" onclick="event.stopPropagation();">Sujet TD3 ⬇</a>
+                    <a class="lien" href="sujet_projet.pdf" download="sujet_projet.pdf" onclick="event.stopPropagation();">Sujet projet ⬇</a>
                 </div>
                 <div class="cour" onclick="window.location.href='cour.html'" style="cursor: pointer;">
                     <div class="course-img"></div>
@@ -57,17 +57,17 @@
             <div id="activity-container">
                 <li>⭐ en "cour" "personne à "action" "Titre"</li>
                 <li>🔺 en WE4A M.Lombar à rajouter
-                    <a class="lien"  href="#">Sujet TD3 ⬇</a>
+                    <a class="lien" href="sujet_projet.pdf" download="sujet_projet.pdf">Sujet projet ⬇</a>
                 </li>
                 <li>🔺 en WE4A M.Lombar à annoncer changement de salle</li>
                 <li>⭐ en "cour" "personne à "action" "Titre"</li>
                 <li>🔺 en WE4A M.Lombar à rajouter
-                    <a class="lien" href="#">Sujet TD3 ⬇</a>
+                    <a class="lien" href="sujet_projet.pdf" download="sujet_projet.pdf">Sujet projet ⬇</a>
                 </li>
                 <li>🔺 en WE4A M.Lombar à annoncer changement de salle</li>
                 <li>⭐ en "cour" "personne à "action" "Titre"</li>
                 <li>🔺 en WE4A M.Lombar à rajouter
-                    <a class="lien" href="#">Sujet TD3 ⬇</a>
+                    <a class="lien" href="sujet_projet.pdf" download="sujet_projet.pdf">Sujet projet ⬇</a>
                 </li>
                 <li>🔺 en WE4A M.Lombar à annoncer changement de salle</li>
             </div>
