--- a/cours.html
+++ b/cours.html
@@ -36,7 +36,7 @@
         <div class="cour" onclick="window.location.href='cour.html'" style="cursor: pointer;">
           <div class="course-img"></div>
           <p>WE4A</p>
-          <a class="lien" href="#" onclick="event.stopPropagation();">Sujet TD3 ⬇</a>
+          <a class="lien" href="sujet_projet.pdf" download="sujet_projet.pdf" onclick="event.stopPropagation();">Sujet projet ⬇</a>
         </div>
         <div class="cour" onclick="window.location.href='cour.html'" style="cursor: pointer;">
           <div class="course-img"></div>
