--- a/notes.html
+++ b/notes.html
@@ -39,17 +39,17 @@
       </tr>
       </thead>
       <tbody>
-      <tr>
+      <tr onclick="window.location.href='note.html';">
         <td>RS40</td>
         <td>3ᵉ / 30</td>
         <td>16.5</td>
       </tr>
-      <tr>
+      <tr onclick="window.location.href='note.html';">
         <td>SI40</td>
         <td>5ᵉ / 30</td>
         <td>14.8</td>
       </tr>
-      <tr>
+      <tr onclick="window.location.href='note.html';">
         <td>WE4A</td>
         <td>1ᵉʳ / 30</td>
         <td>19.2</td>
