--- a/note.html
+++ b/note.html
@@ -17,7 +17,7 @@
         <button class="bouton_menu">mes cours</button>
       </a>
       <a href="notes.html">
-        <button id="bouton_menu_actif" class="bouton_menu" disabled>mes notes</button>
+        <button class="bouton_menu">mes notes</button>
       </a>
     </div>
     <div>
@@ -30,7 +30,7 @@
 
 <main id="main_cours">
   <section id="section_notes">
-    <table id="notes-cliquable" class="notes-table">
+    <table class="notes-table">
       <thead>
       <tr>
         <th>Matière</th>
@@ -39,29 +39,30 @@
       </tr>
       </thead>
       <tbody>
-      <tr onclick="window.location.href='note.html';">
-        <td>RS40</td>
+      <tr>
+        <td>ex 1</td>
         <td>3ᵉ / 30</td>
         <td>16.5</td>
       </tr>
-      <tr onclick="window.location.href='note.html';">
-        <td>SI40</td>
+      <tr>
+        <td>ex 2</td>
         <td>5ᵉ / 30</td>
         <td>14.8</td>
       </tr>
-      <tr onclick="window.location.href='note.html';">
-        <td>WE4A</td>
+      <tr>
+        <td>médiant</td>
         <td>1ᵉʳ / 30</td>
         <td>19.2</td>
       </tr>
       </tbody>
     </table>
 
+
   </section>
 
 </main>
 
-<script src="notes.js"></script>
+<script src="note.js"></script>
 </body>
 </html>
 </title>
