--- a/cour.html
+++ b/cour.html
@@ -30,7 +30,7 @@
 
 <div class="page_cours">
     <main>
-        <div id="contenu">
+        <div>
             <div class="header-cours">
                 <h1 class="titre-cours">Mon cours</h1>
                 <h3 class="sous-titre">Contenu du cours</h3>
