--- a/connexion.html
+++ b/connexion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>Connexion</title>
@@ -24,7 +24,8 @@
     <h2>Connexion</h2>
     <div>
         pour le test<br>
-        user = admin<br>
+        user =<br>
+        profadmin/ admin/ prof/ eleve<br>
         mdp = 1234
     </div>
     <form id="form_connexion">
