--- a/admin.html
+++ b/admin.html
@@ -33,31 +33,40 @@
         <div id="tabUE" class="tab-content active">
             <div class="form-section">
                 <h2>Créer une UE</h2>
-                <input type="text" id="ueName" placeholder="Nom de l'UE">
-                <button onclick="createUE()">Créer UE</button>
+                <!-- todo rajouter description du cour et image -->
+                <input type="text" id="nomUe" placeholder="Nom de l'UE">
+                <input type="text" id="descriptionUe" placeholder="description">
+
+                <button onclick="creerUE()">Créer UE</button>
             </div>
 
             <div class="form-section">
                 <h2>Catalogue des UE</h2>
-                <input type="text" id="searchUE" placeholder="Rechercher une UE..." oninput="refreshUEList()">
+                <input type="text" id="searchUE" placeholder="Rechercher une UE..." oninput="rechercheUE()">
                 <div id="ueList" class="list"></div>
             </div>
         </div>
 
-        <div id="tabcour" class="tab-content">
+        <div class="tab-content">
             <div class="form-section">
-                <h2>Créer un User</h2>
-                <input type="text" id="userName" placeholder="Nom d'utilisateur" value="Jean Dupont">
+                <h2>Créer un Utilisateur</h2>
+                <input type="text" id="email" placeholder="email">
+                <input type="text" id="nomUser" placeholder="Nom d'utilisateur">
+                <input type="text" id="mdp" placeholder="mot de passe">
+                <input type="text" id="c_mdp" placeholder="confirmation mot de passe">
                 <select id="userRole">
-                    <option value="Étudiant">Étudiant</option>
-                    <option value="Enseignant">Enseignant</option>
+                    <option value="eleve">Étudiant</option>
+                    <option value="prof">Enseignant</option>
+                    <option value="admin">Administrateur</option>
+                    <option value="profAdmin">Administrateur et Enseignant</option>
                 </select>
-                <button onclick="createUser()">Créer Utilisateur</button>
+
+                <button onclick="creerUser()">Créer Utilisateur</button>
             </div>
 
             <div class="form-section">
-                <h2>Catalogue des Users</h2>
-                <input type="text" id="searchUser" placeholder="Rechercher un utilisateur..." oninput="refreshUserList()">
+                <h2>Gérer les utilisateurs</h2>
+                <input type="text" id="searchUser" placeholder="Rechercher un utilisateur..." oninput="rechercheUser()">
                 <div id="userList" class="list"></div>
             </div>
         </div>
